--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,12 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+		"infyomlabs/adminlte-templates": "^3.0",
+         "infyomlabs/laravel-generator": "^3.0",
+         "laravel/ui": "3.0",
+         "laravelcollective/html": "^6.2",
+          "doctrine/dbal": "~2.3" 
     },
     "require-dev": {
         "facade/ignition": "^2.5",
